// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookForm renders  component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-book-information"
        id="standard-card-book-information"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-book-information-header"
              id="standard-card-book-information-header"
            >
              Book information
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-book-information-content"
          data-testid="standard-card-book-information-content"
          id="standard-card-book-information-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Book title"
                name="rek_title"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Place of publication"
                name="fez_record_search_key_place_of_publication.rek_place_of_publication"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Publisher"
                name="fez_record_search_key_publisher.rek_publisher"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Total pages"
                name="fez_record_search_key_total_pages.rek_total_pages"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="DOI"
                name="fez_record_search_key_doi.rek_doi"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                name="rek_date"
                required="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-authors"
        id="standard-card-authors"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-authors-header"
              id="standard-card-authors-header"
            >
              Authors
            </h3>
          </div>
          <div
            class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
          >
            <button
              aria-label="Click for more information"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="help-icon"
              data-mui-internal-clone-element="true"
              data-testid="help-icon"
              id="help-icon"
              tabindex="0"
              type="button"
            >
              <svg
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
                data-testid="HelpOutlineIcon"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                />
                <title>
                  Click for more information
                </title>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-authors-content"
          data-testid="standard-card-authors-content"
          id="standard-card-authors-content"
        >
          <field
            disabled="false"
            is="mock"
            name="authors"
            required="true"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-editors"
        id="standard-card-editors"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-editors-header"
              id="standard-card-editors-header"
            >
              Editors
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-editors-content"
          data-testid="standard-card-editors-content"
          id="standard-card-editors-content"
        >
          <field
            disabled="false"
            is="mock"
            name="editors"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-isbn"
        id="standard-card-isbn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-isbn-header"
              id="standard-card-isbn-header"
            >
              ISBN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-isbn-content"
          data-testid="standard-card-isbn-content"
          id="standard-card-isbn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISBN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_isbn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-issn"
        id="standard-card-issn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-issn-header"
              id="standard-card-issn-header"
            >
              ISSN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-issn-content"
          data-testid="standard-card-issn-content"
          id="standard-card-issn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISSN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_issn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-optional-details"
        id="standard-card-optional-details"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-optional-details-header"
              id="standard-card-optional-details-header"
            >
              Optional details
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-optional-details-content"
          data-testid="standard-card-optional-details-content"
          id="standard-card-optional-details-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Notes (not publicly viewable)"
                name="comments"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Link (URL)"
                name="rek_link"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookForm renders  component should render contributor assignment 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-book-information"
        id="standard-card-book-information"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-book-information-header"
              id="standard-card-book-information-header"
            >
              Book information
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-book-information-content"
          data-testid="standard-card-book-information-content"
          id="standard-card-book-information-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Book title"
                name="rek_title"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Place of publication"
                name="fez_record_search_key_place_of_publication.rek_place_of_publication"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Publisher"
                name="fez_record_search_key_publisher.rek_publisher"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Total pages"
                name="fez_record_search_key_total_pages.rek_total_pages"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="DOI"
                name="fez_record_search_key_doi.rek_doi"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                name="rek_date"
                required="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-isbn"
        id="standard-card-isbn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-isbn-header"
              id="standard-card-isbn-header"
            >
              ISBN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-isbn-content"
          data-testid="standard-card-isbn-content"
          id="standard-card-isbn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISBN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_isbn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-issn"
        id="standard-card-issn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-issn-header"
              id="standard-card-issn-header"
            >
              ISSN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-issn-content"
          data-testid="standard-card-issn-content"
          id="standard-card-issn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISSN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_issn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-optional-details"
        id="standard-card-optional-details"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-optional-details-header"
              id="standard-card-optional-details-header"
            >
              Optional details
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-optional-details-content"
          data-testid="standard-card-optional-details-content"
          id="standard-card-optional-details-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Notes (not publicly viewable)"
                name="comments"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Link (URL)"
                name="rek_link"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookForm renders  component should render non ntro book 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-book-information"
        id="standard-card-book-information"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-book-information-header"
              id="standard-card-book-information-header"
            >
              Book information
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-book-information-content"
          data-testid="standard-card-book-information-content"
          id="standard-card-book-information-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Book title"
                name="rek_title"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Place of publication"
                name="fez_record_search_key_place_of_publication.rek_place_of_publication"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Publisher"
                name="fez_record_search_key_publisher.rek_publisher"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Total pages"
                name="fez_record_search_key_total_pages.rek_total_pages"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="DOI"
                name="fez_record_search_key_doi.rek_doi"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                name="rek_date"
                required="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-authors"
        id="standard-card-authors"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-authors-header"
              id="standard-card-authors-header"
            >
              Authors
            </h3>
          </div>
          <div
            class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
          >
            <button
              aria-label="Click for more information"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="help-icon"
              data-mui-internal-clone-element="true"
              data-testid="help-icon"
              id="help-icon"
              tabindex="0"
              type="button"
            >
              <svg
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
                data-testid="HelpOutlineIcon"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                />
                <title>
                  Click for more information
                </title>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-authors-content"
          data-testid="standard-card-authors-content"
          id="standard-card-authors-content"
        >
          <field
            disabled="false"
            is="mock"
            name="authors"
            required="true"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-editors"
        id="standard-card-editors"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-editors-header"
              id="standard-card-editors-header"
            >
              Editors
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-editors-content"
          data-testid="standard-card-editors-content"
          id="standard-card-editors-content"
        >
          <field
            disabled="false"
            is="mock"
            name="editors"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-isbn"
        id="standard-card-isbn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-isbn-header"
              id="standard-card-isbn-header"
            >
              ISBN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-isbn-content"
          data-testid="standard-card-isbn-content"
          id="standard-card-isbn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISBN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_isbn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-issn"
        id="standard-card-issn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-issn-header"
              id="standard-card-issn-header"
            >
              ISSN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-issn-content"
          data-testid="standard-card-issn-content"
          id="standard-card-issn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISSN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_issn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-optional-details"
        id="standard-card-optional-details"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-optional-details-header"
              id="standard-card-optional-details-header"
            >
              Optional details
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-optional-details-content"
          data-testid="standard-card-optional-details-content"
          id="standard-card-optional-details-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Notes (not publicly viewable)"
                name="comments"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Link (URL)"
                name="rek_link"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookForm renders  component with 4 input fields for NTRO 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-book-information"
        id="standard-card-book-information"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-book-information-header"
              id="standard-card-book-information-header"
            >
              Book information
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-book-information-content"
          data-testid="standard-card-book-information-content"
          id="standard-card-book-information-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Book title"
                name="rek_title"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Place of publication"
                name="fez_record_search_key_place_of_publication.rek_place_of_publication"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Publisher"
                name="fez_record_search_key_publisher.rek_publisher"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="DOI"
                name="fez_record_search_key_doi.rek_doi"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                name="rek_date"
                required="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-authors"
        id="standard-card-authors"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-authors-header"
              id="standard-card-authors-header"
            >
              Authors
            </h3>
          </div>
          <div
            class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
          >
            <button
              aria-label="Click for more information"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="help-icon"
              data-mui-internal-clone-element="true"
              data-testid="help-icon"
              id="help-icon"
              tabindex="0"
              type="button"
            >
              <svg
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
                data-testid="HelpOutlineIcon"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                />
                <title>
                  Click for more information
                </title>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-authors-content"
          data-testid="standard-card-authors-content"
          id="standard-card-authors-content"
        >
          <field
            disabled="false"
            is="mock"
            name="authors"
            required="true"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-editors"
        id="standard-card-editors"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-editors-header"
              id="standard-card-editors-header"
            >
              Editors
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-editors-content"
          data-testid="standard-card-editors-content"
          id="standard-card-editors-content"
        >
          <field
            disabled="false"
            is="mock"
            name="editors"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-ntro-data"
        id="standard-card-ntro-data"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-ntro-data-header"
              id="standard-card-ntro-data-header"
            >
              NTRO data
            </h3>
          </div>
          <div
            class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
          >
            <button
              aria-label="Click for more information"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="help-icon"
              data-mui-internal-clone-element="true"
              data-testid="help-icon"
              id="help-icon"
              tabindex="0"
              type="button"
            >
              <svg
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
                data-testid="HelpOutlineIcon"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                />
                <title>
                  Click for more information
                </title>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-ntro-data-content"
          data-testid="standard-card-ntro-data-content"
          id="standard-card-ntro-data-content"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            >
              <field
                disabled="false"
                is="mock"
                name="ntroAbstract"
                title="[object Object]"
              />
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-12 css-9tgihn-MuiGrid2-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Total pages/Extent"
                name="fez_record_search_key_total_pages.rek_total_pages"
                required="true"
              />
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Language"
                name="languages"
              />
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Quality indicators"
                name="qualityIndicators"
                required="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-grant-details"
        id="standard-card-grant-details"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-grant-details-header"
              id="standard-card-grant-details-header"
            >
              Grant details
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-grant-details-content"
          data-testid="standard-card-grant-details-content"
          id="standard-card-grant-details-content"
        >
          <field
            disabled="false"
            is="mock"
            name="grants"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-isbn"
        id="standard-card-isbn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-isbn-header"
              id="standard-card-isbn-header"
            >
              ISBN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-isbn-content"
          data-testid="standard-card-isbn-content"
          id="standard-card-isbn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISBN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_isbn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-issn"
        id="standard-card-issn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-issn-header"
              id="standard-card-issn-header"
            >
              ISSN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-issn-content"
          data-testid="standard-card-issn-content"
          id="standard-card-issn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISSN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_issn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-optional-details"
        id="standard-card-optional-details"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-optional-details-header"
              id="standard-card-optional-details-header"
            >
              Optional details
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-optional-details-content"
          data-testid="standard-card-optional-details-content"
          id="standard-card-optional-details-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Notes (not publicly viewable)"
                name="comments"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Link (URL)"
                name="rek_link"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookForm renders  should hide author when is edited book 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-book-information"
        id="standard-card-book-information"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-book-information-header"
              id="standard-card-book-information-header"
            >
              Book information
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-book-information-content"
          data-testid="standard-card-book-information-content"
          id="standard-card-book-information-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Book title"
                name="rek_title"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Place of publication"
                name="fez_record_search_key_place_of_publication.rek_place_of_publication"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Publisher"
                name="fez_record_search_key_publisher.rek_publisher"
                required="true"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Total pages"
                name="fez_record_search_key_total_pages.rek_total_pages"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="DOI"
                name="fez_record_search_key_doi.rek_doi"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b3l6lk-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                name="rek_date"
                required="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-editors"
        id="standard-card-editors"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-editors-header"
              id="standard-card-editors-header"
            >
              Editors
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-editors-content"
          data-testid="standard-card-editors-content"
          id="standard-card-editors-content"
        >
          <field
            disabled="false"
            is="mock"
            name="editors"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-isbn"
        id="standard-card-isbn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-isbn-header"
              id="standard-card-isbn-header"
            >
              ISBN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-isbn-content"
          data-testid="standard-card-isbn-content"
          id="standard-card-isbn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISBN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_isbn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-issn"
        id="standard-card-issn"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-issn-header"
              id="standard-card-issn-header"
            >
              ISSN
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-issn-content"
          data-testid="standard-card-issn-content"
          id="standard-card-issn-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
          >
            You can add up to five ISSN values
          </p>
          <field
            disabled="false"
            is="mock"
            name="fez_record_search_key_issn"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-optional-details"
        id="standard-card-optional-details"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-optional-details-header"
              id="standard-card-optional-details-header"
            >
              Optional details
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-optional-details-content"
          data-testid="standard-card-optional-details-content"
          id="standard-card-optional-details-content"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Notes (not publicly viewable)"
                name="comments"
              />
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <field
                disabled="false"
                is="mock"
                label="Link (URL)"
                name="rek_link"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
